--- a/src/app/components/institution/single-institute/single-institute.component.html
+++ b/src/app/components/institution/single-institute/single-institute.component.html
@@ -19,11 +19,18 @@
         <div class="spinner-container" *ngIf="!showMap">
             <mat-spinner [diameter]="50"></mat-spinner>
           </div>
+
+          <!-- 
+               height="500px"
+                width="100%"
+           -->
         <div *ngIf="allInstitutionList.length!=0">
-          <div class="col-12 dis_flex" role="listbox">
+          <div class="col-12 dis_flex mapContainer" role="listbox">
               <ng-conatiner *ngIf="showMap">
-                <google-map height="500px"
-                width="750px"
+                <google-map 
+                class="gMap"
+                height="100%"
+                width="100%"
                 [center]="center"
                 [zoom]="zoom"
                 (mapClick)="moveMap($event)"
@@ -37,8 +44,8 @@
                     </ng-container>
                 </google-map>
               </ng-conatiner>
-            <div class="col-5 ml-3"> 
-              <img class="mb-2 col-6" src="{{ allInstitutionList.image}}" alt="slide">
+            <div class="col-12 ml-3 institution-details"> 
+              <img class="mb-2 col-6 instImg" src="{{ allInstitutionList.image}}" alt="slide">
               <div class="widget_header mt-3">
                 <h5 class="red_text">{{allInstitutionList.name}}</h5>
                 <p style="color: #FFFFFF80;;font-weight: 600;">{{allInstitutionList.city}}, {{ allInstitutionList.country}}</p>
@@ -46,7 +53,7 @@
              
               <div class="dis_flex">
                 <div class="ml-2" style="display: block;">
-                  <p style="color: white;margin: 5px 0px 5px 0px;">{{allInstitutionList.description}}
+                  <p class="desc" style="color: white;margin: 5px 0px 5px 0px;">{{allInstitutionList.description}}
                   </p>
                 </div>
               </div>
@@ -58,62 +65,58 @@
     
 </div>
 
-<div class="footerCont">
+<!-- <div class="footerCont">
   <div class="footerInner">
       <p>© 2024, Medstream360, All Rights Reserved</p>
       <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
   </div>
-</div>
-
-<!-- <div class="home_container">
-  <div class="widget_accordion">
-      <div class="widget_header">
-          <h5 class="mr-auto">Institution Details</h5>
-      </div>
-      <div *ngIf="allInstitutionList.length==0 && showMap">
-          <label class="flex_align">No institution found</label>
-      </div>
-      <div class="spinner-container" *ngIf="!showMap">
-          <mat-spinner [diameter]="50"></mat-spinner>
-      </div>
-      <div *ngIf="allInstitutionList.length!=0">
-          <div class="row">
-              <div class="col-12">
-                  <ng-container *ngIf="showMap">
-                      <google-map height="500px" width="100%" [center]="center" [zoom]="zoom"
-                          (mapClick)="moveMap($event)" (mapMousemove)="move($event)">
-                          <ng-container *ngIf="markerPositions.length">
-                              <map-marker #marker="mapMarker" *ngFor="let markerPosition of markerPositions;let index =i"
-                                  [position]="markerPosition.position" [options]="markerOptions"
-                                  (mapClick)="openInfoWindow(marker,markerPosition,i)">
-                                  <map-info-window>{{markerInfo}}</map-info-window>
-                              </map-marker>
-                          </ng-container>
-                      </google-map>
-                  </ng-container>
-              </div>
-              <div class="col-12 mt-3">
-                  <div class="row">
-                      <div class="col-6">
-                          <img class="mb-2 img-fluid" src="{{ allInstitutionList.image }}" alt="slide">
-                      </div>
-                      <div class="col-6">
-                          <div class="widget_header">
-                              <h5 class="red_text">{{ allInstitutionList.name }}</h5>
-                              <p style="color: #FFFFFF80;font-weight: 600;">{{ allInstitutionList.city }},
-                                  {{ allInstitutionList.country }}</p>
-                          </div>
-                          <div class="dis_flex">
-                              <div class="ml-2">
-                                  <p style="color: white;margin: 5px 0;">{{ allInstitutionList.description }}</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
 </div> -->
 
-
+<!-- <div class="home_container">
+    <div class="widget_accordion">
+        <div class="widget_header">
+          <h5 class="mr-auto">Institution Details</h5>
+        </div>
+        <div *ngIf="allInstitutionList.length==0 &&showMap">
+          <label class="flex_align">No institution found</label>
+        </div>
+        <div class="spinner-container" *ngIf="!showMap">
+            <mat-spinner [diameter]="50"></mat-spinner>
+          </div>
+        <div *ngIf="allInstitutionList.length!=0">
+          <div class="mapContainer">
+              <ng-container *ngIf="showMap">
+                <google-map 
+                class="gMap"
+                height="300px"
+                width="100%"
+                [center]="center"
+                [zoom]="zoom"
+                (mapClick)="moveMap($event)"
+                (mapMousemove)="move($event)">
+                    <ng-container *ngIf="markerPositions.length">
+                        <map-marker #marker="mapMarker" *ngFor="let markerPosition of markerPositions;let index =i"
+                        [position]="markerPosition.position"
+                        [options]="markerOptions"  (mapClick)="openInfoWindow(marker,markerPosition,i)">
+                        <map-info-window>{{markerInfo}}</map-info-window>
+                        </map-marker>
+                    </ng-container>
+                </google-map>
+              </ng-container>
+            <div class="institution-details"> 
+              <div class="institution-header">
+                <h5 class="red_text">{{ allInstitutionList.name }}</h5>
+                <p>{{ allInstitutionList.city }}, {{ allInstitutionList.country }}</p>
+              </div>
+              <div class="institution-content">
+                <img class="mb-2 instImg" src="{{ allInstitutionList.image }}" alt="slide">
+                <div class="description">
+                  <p>{{ allInstitutionList.description }}</p>
+                </div>
+              </div>
+            </div>
+    
+          </div>
+        </div>
+      </div>
+</div> -->
