--- a/src/app/components/institution/single-institute/single-institute.component.scss
+++ b/src/app/components/institution/single-institute/single-institute.component.scss
@@ -21,6 +21,9 @@
     border-bottom: 1px solid #606060;
     margin-bottom: 8px;
   }
+  // .gmap{
+
+  // }
 
   .media_list {
     display: flex;
@@ -100,3 +103,89 @@
 
 //   }
 // }
+
+/* CSS for mobile responsiveness */
+@media screen and (max-width:425px) {
+  .mapContainer {
+    display: grid;
+    grid-template-rows: 1fr 2fr !important;
+}
+
+// .gMap {
+//     width: 100% !important;
+//     height: 100% !important; 
+// }
+
+.institution-details {
+    width: 100% !important;
+    // padding: 0 20px;
+    padding-top: 30px;
+    margin-left: 0 !important;
+}
+
+.institution-header {
+    text-align: center;
+}
+
+.institution-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.instImg{
+  width: 100%;
+  max-height: 400px;
+}
+  
+}
+@media only screen and (min-width:425px) and (max-width: 1020px) {
+  .mapContainer {
+      display: grid;
+      grid-template-rows: 1fr 2fr !important;
+  }
+
+  .gMap {
+      width: 100% !important;
+      height: 70% !important; 
+  }
+
+  .institution-details {
+      width: 100% !important;
+      // padding: 0 20px;
+      padding-top: 30px;
+      margin-left: 0 !important;
+  }
+
+  .institution-header {
+      text-align: center;
+  }
+
+  .institution-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .instImg{
+    width: 70%;
+    max-height: 400px;
+  }
+  // .dis_flex{
+  //   p{
+  //     text-align: justify;
+  //   }
+  // }
+}
+@media only screen and (min-width: 1020px){
+  .mapContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr !important;
+  }
+  google-map {
+    width: 750px !important;
+    height: 500px !important; 
+  }
+  .instImg{
+    width: 70%;
+    max-height: 400px;
+  }
+}
