--- a/src/app/components/all-cases/all-cases.component.scss
+++ b/src/app/components/all-cases/all-cases.component.scss
@@ -117,8 +117,13 @@
 
 
   
-@media screen and (min-width:1000px) and  (max-width: 1100px)  {
- 
+@media screen and (min-width:1024px)  {
+  .sticky_sideNav{
+    display: block !important;
+  }
+  .hide_filter{
+    display: none !important;
+  }
 }
 
 @media screen and (min-width:426px) and  (max-width: 768px)  {
